# casdoor-rust-sdk

./: Cargo.toml
src/service/: auth.rs  user.rs
tests/: auth_test.rs  user_test.rs
